--- a/html/index.html
+++ b/html/index.html
@@ -585,9 +585,9 @@
                             </button>
                             <ul class="image-list">
                               <iframe class="image-item" src="https://www.youtube.com/embed/hFX0AskzmwY" allowfullscreen></iframe>
-                              <iframe class="image-item" src="https://www.youtube.com/embed/hFX0AskzmwY" allowfullscreen></iframe>
-                              <iframe class="image-item" src="https://www.youtube.com/embed/hFX0AskzmwY" allowfullscreen></iframe>
-                              <iframe class="image-item" src="https://www.youtube.com/embed/hFX0AskzmwY" allowfullscreen></iframe>
+                              <iframe class="image-item" src="https://www.youtube.com/embed/vbqFl62-3DY?si=6D4aEGIL-cxBj2Fx" allowfullscreen></iframe>
+                              <iframe class="image-item" src="https://www.youtube.com/embed/4sspVwvJy38?si=QO2Ohwr0q2HEw2QJ" allowfullscreen></iframe>
+                              <img class="image-item" src="../assets/mediaspb.jpg">
                     
                             </ul>
                             <button id="next-slide" class="slide-button material-symbols-rounded">
