--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Construction, Yuktha, Yuktha Constructions, Wingherry, Wingherry Technologies, Nirmaankara, Kikiclick, Kikiclick Ads, Kalamitra, Entrepreneur, Hyderabad, Contractor, Real Estate Development, Property Development, High-Quality Construction, Excavation Services, Hyderabad Real Estate, Telangana Real Estate, Property Consultation, Best Construction Company in Hyderabad, Road Construction, Best Contractor in Hyderabad, Vijay Sampangi , Sampangi, Telangana" />
-    <title>Document</title>
+    <title>Vijay Sampangi</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/maincontent.css">
     <link rel="stylesheet" href="../css/slider.css">
@@ -120,7 +120,7 @@
                             <p id="wordCount">Word count: 0/250</p>
                         </div>
                         
-                        <span id="submitBtn">Submit</span>
+                        <span id="submitBtn" onclick="validateForm()">Submit</span>
                   </form>
                 </div>
             </div>
