--- a/html/index.html
+++ b/html/index.html
@@ -466,9 +466,9 @@
                             <div class="skill">
                                 <div class="skill-icon">
                                     <!-- Default SVG is purple -->
-                                    <img src="../assets/quality.svg" alt="Quality" class="default-icon">
+                                    <img src="../assets/yuktha-logo.svg" alt="Quality" class="default-icon">
                                     <!-- White SVG is hidden initially -->
-                                    <img src="../assets/qualitywhite.svg" alt="Quality" class="hover-icon">
+                                    <img src="../assets/yuktha-logo.svg" alt="Quality" class="hover-icon">
                                 </div>
                                 <div class="skill-head">Yuktha Highlights</div>
                                 <div class="skill-para">
@@ -483,9 +483,9 @@
                             <div class="skill">
                                 <div class="skill-icon">
                                     <!-- Default SVG is purple -->
-                                    <img src="../assets/multitask.svg" alt="Multi-tasking" class="default-icon">
+                                    <img src="../assets/wingherry-logo.svg" alt="Multi-tasking" class="default-icon">
                                     <!-- White SVG is hidden initially -->
-                                    <img src="../assets/multitaskwhite.svg" alt="Multi-tasking" class="hover-icon">
+                                    <img src="../assets/wingherry-logo.svg" alt="Multi-tasking" class="hover-icon">
                                 </div>
                                 <div class="skill-head">Wingherry Highlights</div>
                                 <div class="skill-para">
@@ -500,14 +500,14 @@
                             <div class="skill">
                                 <div class="skill-icon">
                                     <!-- Default SVG is purple -->
-                                    <img src="../assets/sales.svg" alt="Sales" class="default-icon">
+                                    <img src="../assets/mithra-events.png" alt="Sales" class="default-icon">
                                     <!-- White SVG is hidden initially -->
-                                    <img src="../assets/saleswhite.svg" alt="Sales" class="hover-icon">
+                                    <img src="../assets/mithra-events.png" alt="Sales" class="hover-icon">
                                 </div>
                                 <div class="skill-head">Mithra Events</div>
                                 <div class="skill-para">
                                     <div class="item"><span class="checkmark">✔</span> Organized 1,000+ classical events across multiple cities with legendary singers</div>
-                                    <div class="item"><span class="checkmark">✔</span> Provided payroll software to 25-30 clients across multiple states</div>    
+                                    <div class="item"><span class="checkmark">✔</span> Partnererd with event companies for successful collaborations</div>    
                                 </div>
                             </div>
                         </div>
@@ -597,32 +597,38 @@
                               chevron_left
                             </button>
                             <ul class="image-list">
+                                <li class="image-container" data-video="https://www.youtube.com/embed/hFX0AskzmwY?autoplay=1&mute=1">
+                                  <iframe class="image-item" src="https://www.youtube.com/embed/hFX0AskzmwY" allowfullscreen></iframe>
+                                  <p class="image-title">Yuktha Constructions CEO Vijay on Hyderabad Real Estate Insights.</p>
+                                  <p class="image-title image-para">CEO Vijay of Yuktha Constructions shares insights on the HYDRA project and its impact on Hyderabad's real estate market. Learn about its key features and future developments in the city.</p>
+                                </li>
                                 <li class="image-container" data-video="https://www.youtube.com/embed/vbqFl62-3DY?autoplay=1&mute=1">
                                   <iframe class="image-item" src="https://www.youtube.com/embed/vbqFl62-3DY" allowfullscreen></iframe>
-                                  <p class="image-title">Yuktha Constructions CEO Vijay on  Hyderabad Real Estate Insights.</p>
-                                  <p class="image-title image-para">CEO Vijay of Yuktha Constructions shares insights on the HYDRA project and its impact on Hyderabad's real estate market. Learn about its key features and future developments in the city.</p>
+                                  <p class="image-title">Unknown Facts About Constructions by Vijay Sampangi.</p>
+                                  <p class="image-title image-para">Vijay Sampangi of Yuktha Constructions reveals lesser-known facts about the construction industry. Gain valuable insights and learn from his experiences in the world of real estate and development.</p>
                                 </li>
                                 <li class="image-container" data-video="https://www.youtube.com/embed/4sspVwvJy38?autoplay=1&mute=1">
                                   <iframe class="image-item" src="https://www.youtube.com/embed/4sspVwvJy38" allowfullscreen></iframe>
-                                  <p class="image-title">Unknown Facts About Constructions by Vijay Sampangi .</p>
-                                  <p class="image-title image-para">Vijay Sampangi of Yuktha Constructions reveals lesser-known facts about the construction industry. Gain valuable insights and learn from his experiences in the world of real estate and development.</p>
-                                </li>
-                                <li class="image-container" data-video="https://www.youtube.com/embed/_X92qPEgo6o?autoplay=1&mute=1">
-                                  <iframe class="image-item" src="https://www.youtube.com/embed/_X92qPEgo6o" allowfullscreen></iframe>
-                                  <p class="image-title">Yuktha Constructions: Building Trust in Hyderabad's Real Estate .</p>
+                                  <p class="image-title">Yuktha Constructions: Building Trust in Hyderabad's Real Estate.</p>
                                   <p class="image-title image-para">Discover the vision and expertise behind Yuktha Constructions through this advertisement. Learn how they are shaping the future of Hyderabad's real estate with quality and innovation.</p>
                                 </li>
-                                <li class="image-container" data-video="https://www.youtube.com/embed/yeQ3AM2Y7uw?autoplay=1&mute=1">
-                                  <iframe class="image-item" src="https://www.youtube.com/embed/yeQ3AM2Y7uw" allowfullscreen></iframe>
-                                  <p class="image-title">Video Title 4</p>
+                                <li class="image-container" data-video="https://www.youtube.com/embed/_X92qPEgo6o?autoplay=1&mute=1">
+                                    <iframe class="image-item" src="https://www.youtube.com/embed/_X92qPEgo6o" allowfullscreen></iframe>
+                                    <p class="image-title">The Future of Real Estate: Insights from Yuktha Constructions</p>
+                                    <p class="image-title image-para">Explore the transformative vision of Yuktha Constructions in Hyderabad's real estate sector. This video highlights the company's commitment to innovation, quality, and trust in building modern infrastructure.</p>
+                                  </li>
+                                  <li class="image-container" data-video="https://www.youtube.com/embed/yeQ3AM2Y7uw?autoplay=1&mute=1">
+                                    <iframe class="image-item" src="https://www.youtube.com/embed/yeQ3AM2Y7uw" allowfullscreen></iframe>
+                                    <p class="image-title">Launching new venture development area 80 acres.One-time opportunity best for investment now</p>
+                                    <p class="image-title image-para">Recent started venture Development in Shankarpalli, Hyderabad.
+                                        80 Acres venture area and best for investment in Hyderabad. For free visit call us and Price is reasonable. Best for investment now</p>
                                 </li>
                                 <li class="image-container">
                                   <img class="image-item" src="../assets/mediaspb.jpg">
                                   <p class="image-title">Remembering S.P.Bala Subrahmanyam: A Tribute on the 4th Death Anniversary.</p>
-                                  <p class="image-title image-para">The event paid tribute to the legendary [Singer's Name] on their [X]th death anniversary. It featured heartfelt performances and reflections on their lasting impact on the music industry.</p>
+                                  <p class="image-title image-para">The event paid tribute to the legendary S.P.Bala Subrahmanyam on their 4th death anniversary. It featured heartfelt performances and reflections on their lasting impact on the music industry.</p>
                                 </li>
-                              </ul>
-                              
+                            </ul>
                               
                             <button id="next-slide" class="slide-button material-symbols-rounded">
                               chevron_right
