--- a/html/index.html
+++ b/html/index.html
@@ -607,7 +607,7 @@
                                   <p class="image-title">Unknown Facts About Constructions by Vijay Sampangi.</p>
                                   <p class="image-title image-para">Vijay Sampangi of Yuktha Constructions reveals lesser-known facts about the construction industry. Gain valuable insights and learn from his experiences in the world of real estate and development.</p>
                                 </li>
-                                <li class="image-container" data-video="https://www.youtube.com/embed/4sspVwvJy38?autoplay=1&mute=1">
+                                <!-- <li class="image-container" data-video="https://www.youtube.com/embed/4sspVwvJy38?autoplay=1&mute=1">
                                   <iframe class="image-item" src="https://www.youtube.com/embed/4sspVwvJy38" allowfullscreen></iframe>
                                   <p class="image-title">Yuktha Constructions: Building Trust in Hyderabad's Real Estate.</p>
                                   <p class="image-title image-para">Discover the vision and expertise behind Yuktha Constructions through this advertisement. Learn how they are shaping the future of Hyderabad's real estate with quality and innovation.</p>
@@ -616,18 +616,53 @@
                                     <iframe class="image-item" src="https://www.youtube.com/embed/_X92qPEgo6o" allowfullscreen></iframe>
                                     <p class="image-title">The Future of Real Estate: Insights from Yuktha Constructions</p>
                                     <p class="image-title image-para">Explore the transformative vision of Yuktha Constructions in Hyderabad's real estate sector. This video highlights the company's commitment to innovation, quality, and trust in building modern infrastructure.</p>
-                                  </li>
-                                  <li class="image-container" data-video="https://www.youtube.com/embed/yeQ3AM2Y7uw?autoplay=1&mute=1">
+                                </li>
+                                <li class="image-container" data-video="https://www.youtube.com/embed/yeQ3AM2Y7uw?autoplay=1&mute=1">
                                     <iframe class="image-item" src="https://www.youtube.com/embed/yeQ3AM2Y7uw" allowfullscreen></iframe>
                                     <p class="image-title">Launching new venture development area 80 acres.One-time opportunity best for investment now</p>
                                     <p class="image-title image-para">Recent started venture Development in Shankarpalli, Hyderabad.
                                         80 Acres venture area and best for investment in Hyderabad. For free visit call us and Price is reasonable. Best for investment now</p>
-                                </li>
+                                </li> -->
+                                <li class="image-container" id="video-item-hover">
+                                    <video src="../assets/explaining.mp4" controls class="image-item" id="video-item-play"></video>
+                                    <p class="image-title">Project Briefing at Phase 5, Moosapet: Ensuring Clarity and Collaboration.</p>
+                                    <p class="image-title image-para">I explain the construction plans to a group of laborers at Phase 5, Moosapet. The image captures a moment of teamwork and communication as the workers attentively listen, ensuring clarity in execution. The setting reflects an active construction site, emphasizing collaboration and progress.</p>
+                                  </li>
                                 <li class="image-container">
                                   <img class="image-item" src="../assets/mediaspb.jpg">
                                   <p class="image-title">Remembering S.P.Bala Subrahmanyam: A Tribute on the 4th Death Anniversary.</p>
                                   <p class="image-title image-para">The event paid tribute to the legendary S.P.Bala Subrahmanyam on their 4th death anniversary. It featured heartfelt performances and reflections on their lasting impact on the music industry.</p>
                                 </li>
+                                  <li class="image-container">
+                                    <img class="image-item" src="../assets/ihra-image.jpeg">
+                                    <p class="image-title">Promoting a Safe Environment: IHRA Anti-Ragging Awareness Program.</p>
+                                    <p class="image-title image-para">Participating in an IHRA Anti-Ragging Awareness Program, I actively engages with the audience, emphasizing the importance of a safe and respectful environment. The image highlights his commitment to educating and empowering individuals against ragging, fostering awareness and responsibility.</p>
+                                  </li>
+                                  <li class="image-container">
+                                    <img class="image-item" src="../assets/pooja-isnapur.jpeg">
+                                    <p class="image-title">Auspicious Beginning: Site Pooja Ceremony at Isnapur.</p>
+                                    <p class="image-title image-para">A traditional site pooja ceremony at Isnapur marks the auspicious beginning of an apartment construction project. I leads the ritual, seeking blessings for a successful and smooth construction process. The image captures the cultural significance and positive energy surrounding the project’s commencement.</p>
+                                  </li>
+                                  <li class="image-container">
+                                    <img class="image-item" src="../assets/Raidurgam.jpeg">
+                                    <p class="image-title">Formalizing Progress: Project Agreement Signing for Raidurgam at Gachibowli.</p>
+                                    <p class="image-title image-para">Signing the project agreement with the landlord for the Raidurgam project at Gachibowli. This moment marks a significant milestone in the project's journey, symbolizing collaboration and progress towards successful development.</p>
+                                  </li>
+                                  <li class="image-container">
+                                    <img class="image-item" src="../assets/vijay-shree.jpeg">
+                                    <p class="image-title">Strengthening Progress: Vijay-Shree Project Agreement at Isnapur.</p>
+                                    <p class="image-title image-para">Formal agreement signing with the landlord for the Vijay-Shree project at Isnapur. This key milestone represents a step forward in the project's development, strengthening partnerships and paving the way for future construction.</p>
+                                  </li>
+                                  <li class="image-container">
+                                    <img class="image-item" src="../assets/indranagar.jpeg">
+                                    <p class="image-title">Collaborative Milestone: Agreement with Telugu Cine Stunt Director at Indranagar.</p>
+                                    <p class="image-title image-para">Signing an agreement with the renowned Telugu cine stunt director at Indranagar. This collaboration marks an important step, fostering new opportunities and strengthening professional partnerships in the industry.</p>
+                                  </li>
+                                  <li class="image-container">
+                                    <img class="image-item" src="../assets/chirala.jpeg">
+                                    <p class="image-title">Strategic Deal: Agreement Between Brahmmas Agro Industries & Yuktha Earth Movers.</p>
+                                    <p class="image-title image-para">The formal agreement between Brahmmas Agro Industries Pvt. Ltd. and Yuktha Earth Movers and Machinery & Constructions marks a significant transaction. Under the agreement, the plant is sold on an 'as is where is' and 'with the present condition' basis for a lump sum, reinforcing a strategic business deal.</p>
+                                  </li>
                             </ul>
                               
                             <button id="next-slide" class="slide-button material-symbols-rounded">
@@ -656,15 +691,15 @@
                     <div class="association-main-box">
                         <div class="association-boxes">
                             <div class="association-box">
-                                <img src="../assets/association.svg" alt="">
+                                <img src="../assets/ihra.png" alt="">
                                 <div>Vigilance Director <span>Human Rights</span></div>
                             </div>
                             <div class="association-box">
-                                <img src="../assets/association.svg" alt="">
+                                <img src="../assets/telanganalogo.png" alt="">
                                 <div>Telangana Contarctors Association <span>Member</span></div>
                             </div>
                             <div class="association-box">
-                                <img src="../assets/mithra.svg" alt="">
+                                <img src="../assets/mithra-events.png" alt="">
                                 <div>Mithra Events <span>Co-Partner</span></div>
                             </div>
                         </div>
