--- a/html/index.html
+++ b/html/index.html
@@ -500,9 +500,9 @@
                             <div class="skill">
                                 <div class="skill-icon">
                                     <!-- Default SVG is purple -->
-                                    <img src="../assets/mithra-events.png" alt="Sales" class="default-icon">
+                                    <img src="../assets/mitra-evemts.png" alt="Sales" class="default-icon">
                                     <!-- White SVG is hidden initially -->
-                                    <img src="../assets/mithra-events.png" alt="Sales" class="hover-icon">
+                                    <img src="../assets/mitra-evemts.png" alt="Sales" class="hover-icon">
                                 </div>
                                 <div class="skill-head">Mithra Events</div>
                                 <div class="skill-para">
@@ -699,7 +699,7 @@
                                 <div>Telangana Contarctors Association <span>Member</span></div>
                             </div>
                             <div class="association-box">
-                                <img src="../assets/mithra-events.png" alt="">
+                                <img src="../assets/mitra-evemts.png" alt="">
                                 <div>Mithra Events <span>Co-Partner</span></div>
                             </div>
                         </div>
